--- a/assets/styles/light-theme.scss
+++ b/assets/styles/light-theme.scss
@@ -181,3 +181,14 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px; // Add some space below the text
   }
 }
+
+.highlights {
+  h3 {
+    padding-top: 100px;
+    font-size: 1.25rem;
+    background-color: rgba(38, 107, 110, 0.3);
+    align-items: center;
+    display: flex;
+    padding: 10px;
+  }
+}
