--- a/docs/assets/styles/team-styles.css
+++ b/docs/assets/styles/team-styles.css
@@ -60,7 +60,7 @@ div.column {
 }
 
 .divider::before {
-  content: '· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·';
+  content: '· · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·';
   display: block;
   text-align: center;
   width: 100%;
