--- a/assets/styles/light-theme.scss
+++ b/assets/styles/light-theme.scss
@@ -43,6 +43,12 @@ $footer-fg: $jungle-green;
   font-size: 30px !important;
 }
 
+@media (max-width: 350px) {
+  .navbar-brand {
+    font-size: 25px !important;
+  }
+}
+
 // Back-to-top button
 #quarto-back-to-top {
   color: $link-color;
@@ -214,7 +220,16 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: .75em;
     border-color: #1D4F60FF;
     color: #1D4F60FF;
-    opacity: 100%;
+    opacity: 1 !important;
+}
+
+.quarto-title .quarto-categories .quarto-category {
+    padding: .25em .75em;
+    font-size: .65em;
+    text-transform: uppercase;
+    border: solid 1px;
+    border-radius: .25rem;
+    opacity: 1;
 }
 
 .quarto-grid-item .card-title {
